--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=eureka-server
 server.port=8761
+#是否注册到eureka中心，由于此项目本事就是eureka中心，所以无需注册
 eureka.client.register-with-eureka=false
+#检索服务，eureka中心本身服务注入到此，无需再次检索服务
 eureka.client.fetch-registry=false
 spring.freemarker.prefer-file-system-access=false
+#关闭保护模式
 eureka.server.enable-self-preservation=false
 spring.security.user.name=gmy
 spring.security.user.password=123456
+#服务清理间隔
 eureka.server.eviction-interval-timer-in-ms=5000
